# agentsofchaos

./: .dockerignore  .gitignore  AGENTS.md  README.md  notes.md  readme.md
apps/orchestrator-v2/: AGENT.md  README.md  pyproject.toml
apps/orchestrator-v2/docs/: architecture.md  context-model.md  implementation-plan.md  manifesto.md  runtime-adapters.md
apps/orchestrator-v2/docs/adrs/: 0001-local-first-daemon.md  0002-immutable-nodes-ephemeral-runs.md  0003-context-is-first-class.md  0004-common-ancestor-for-code-and-context-merges.md  0005-runtime-adapters-pi-first-not-pi-only.md  0006-defer-migrations-until-1-0.md  0007-pre-1-0-foundational-refactors.md
apps/orchestrator-v2/src/agentsofchaos_orchestrator_v2/: __init__.py  main.py
apps/orchestrator-v2/src/agentsofchaos_orchestrator_v2/api/: __init__.py  app.py  dependencies.py  schemas.py
apps/orchestrator-v2/src/agentsofchaos_orchestrator_v2/application/: __init__.py  artifacts.py  context_merge.py  context_projection.py  diffs.py  eventing.py  merges.py  outbox.py  outbox_worker.py  project_nodes.py  queries.py  recovery.py  run_state.py  runs.py  services.py  supervisor.py
apps/orchestrator-v2/src/agentsofchaos_orchestrator_v2/domain/: __init__.py  enums.py  errors.py  models.py  run_policy.py
apps/orchestrator-v2/src/agentsofchaos_orchestrator_v2/infrastructure/: __init__.py  db.py  event_bus.py  git_service.py  orm.py  repositories.py  settings.py  unit_of_work.py
apps/orchestrator-v2/tests/: README.md  test_context_merge.py  test_git_service.py  test_merge_flow.py  test_merge_status.py  test_orchestrator_service.py  test_prompt_run.py  test_run_policy.py  test_runtime_adapters.py
docs/: architecture.md  manifesto.md  (+11 more)
(+257 files in other folders)
