[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentsofchaos-orchestrator-v2"
version = "0.1.0"
description = "Local-first immutable graph daemon for Agents of Chaos v2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
  "sqlalchemy>=2.0,<3.0",
  "alembic>=1.13,<2.0",
  "pydantic>=2.8,<3.0",
  "pydantic-settings>=2.4,<3.0",
  "aiosqlite>=0.20,<1.0",
  "anyio>=4.4,<5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<9.0",
  "pytest-asyncio>=0.24,<1.0",
  "pytest-cov>=5.0,<6.0",
  "ruff>=0.6,<1.0",
  "mypy>=1.11,<2.0",
  "types-setuptools>=75.0,<76.0"
]

[project.scripts]
aoc-orchestrator-v2 = "agentsofchaos_orchestrator_v2.main:run"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "--strict-markers --strict-config --cov=agentsofchaos_orchestrator_v2 --cov-report=term-missing"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C4", "SIM", "N", "ASYNC", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.12"
strict = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
no_implicit_optional = true
show_error_codes = true
pretty = true

[tool.coverage.run]
branch = true
source = ["agentsofchaos_orchestrator_v2"]
